created marketing copy, needs styling

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,8 +4,8 @@
   align-items: center;
   flex-flow: column;
   height: 450px;
-  background-image: url('../images/houston-hwy.webp');
-  background-color: #cccccc;
+  background: #fefae0;
+  background-color: #d8f3dc;
   /* Used if the image is unavailable */
   background-position: center;
   /* Center the image */
@@ -23,7 +23,12 @@
   justify-content: center;
   align-items: center;
   margin: 1rem;
-  color: whitesmoke;
+  color: black;
+}
+@media screen and (min-width: 768px) {
+  .hero h1 {
+    color: whitesmoke;
+  }
 }
 .hero .link {
   display: flex;
@@ -202,7 +207,7 @@
     width: 100vw;
   }
 }
-.steps {
+.testimonials {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -210,12 +215,18 @@
   background-color: whitesmoke;
 }
 @media screen and (min-width: 768px) {
-  .steps {
+  .testimonials {
     height: 100vh;
+  }
+  .testimonials blockquote {
+    margin: 2rem 0;
   }
 }
 @media screen and (min-width: 1586px) {
-  .steps {
+  .testimonials {
     width: 100vw;
+  }
+  .testimonials blockquote {
+    margin: 2rem 0;
   }
 }
