--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -102,10 +102,13 @@
   margin: 1.5rem;
   @media screen and (min-width: 768px) {
     justify-content: space-evenly;
+    padding: 5rem;
   }
   h4 {
     @media screen and (min-width: 768px) {
-      font-size: 3rem;
+      line-height: 3rem;
+
+      margin: 2rem 0;
     }
   }
   h1 {
@@ -204,6 +207,16 @@
   }
 }
 
+.estimate {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  padding: 5rem;
+  h1 {
+    margin: 1rem 0;
+  }
+}
 // @media screen and (min-width: 361px) {
 
 // }
