--- a/src/styles/partner.css
+++ b/src/styles/partner.css
@@ -23,6 +23,10 @@
   border-radius: 5px;
   border: none;
   cursor: pointer;
+  height: 3rem;
+  background-color: green;
+  color: whitesmoke;
+  font-family: Asap, sans-serif;
 }
 .partner figure blockquote p {
   border-bottom: 1rem;
