--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -22,6 +22,11 @@
         border-radius: 5px;
         border: none;
         cursor: pointer;
+        height: 3rem;
+        font-family: Asap, sans-serif;
+        background-color: green;
+        color: whitesmoke;
+        font-family: Asap, sans-serif;
       }
     }
   }
