--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -22,6 +22,9 @@
     @media screen and (min-width: 768px) {
       color: whitesmoke;
     }
+    @media screen and (min-width: 1568px) {
+      font-size: 3rem;
+    }
   }
   .link {
     display: flex;
@@ -36,6 +39,11 @@
     font-size: 1.5rem;
     color: whitesmoke;
     font-family: Montserrat-alternates, sans-serif;
+    @media screen and (min-width: 1568px) {
+      font-size: 2.5rem;
+      width: 22rem;
+      height: 3.5rem;
+    }
   }
 }
 .info {
@@ -61,6 +69,13 @@
   h1 {
     font-size: 3rem;
     line-height: 3rem;
+  }
+  p {
+    margin: 1rem 0;
+  }
+  @media screen and (min-width: 1568px) {
+    padding: 0 5rem;
+    font-size: 2rem;
   }
   iframe {
     width: 325px;
