--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -39,6 +39,7 @@
     font-size: 1.5rem;
     color: whitesmoke;
     font-family: Montserrat-alternates, sans-serif;
+
     @media screen and (min-width: 1568px) {
       font-size: 2.5rem;
       width: 22rem;
@@ -103,10 +104,18 @@
     height: 40vh;
   }
   h1 {
-    font-size: 32px;
+    font-size: 2rem;
+    @media screen and (min-width: 1568px) {
+      font-size: 4.5rem;
+      padding: 0 4rem;
+    }
   }
   p {
     margin: 1.5rem 0px;
+    @media screen and (min-width: 1568px) {
+      font-size: 2rem;
+      padding: 0 4rem;
+    }
   }
 }
 .second-white-info {
@@ -122,8 +131,10 @@
   h4 {
     @media screen and (min-width: 768px) {
       line-height: 3rem;
-
       margin: 2rem 0;
+    }
+    @media screen and (min-width: 1568px) {
+      font-size: 1.5rem;
     }
   }
   h1 {
@@ -132,16 +143,40 @@
     @media screen and (min-width: 768px) {
       font-size: 4rem;
     }
+    @media screen and (min-width: 1568px) {
+      font-size: 4.5rem;
+      padding: 0 4rem;
+      line-height: 5rem;
+    }
   }
   h6 {
     @media screen and (min-width: 768px) {
       font-size: 2rem;
     }
+    @media screen and (min-width: 1568px) {
+      padding: 0 3rem;
+    }
   }
 
   p {
-    @media screen and (min-width: 768px) {
-      font-size: 1.5rem;
+    @media screen and (min-width: 1568px) {
+      font-size: 2rem;
+      padding: 0 4rem;
+    }
+  }
+  a {
+    button {
+      @media screen and (min-width: 1568px) {
+        width: 20rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        font-family: Montserrat-alternates, sans-serif;
+        text-decoration: none;
+        border: none;
+        border-radius: 10px;
+        background-color: green;
+        color: whitesmoke;
+      }
     }
   }
 }
@@ -159,12 +194,20 @@
   }
   h1 {
     font-size: 32px;
+    @media screen and (min-width: 1568px) {
+      font-size: 4.5rem;
+      padding: 0 4rem;
+    }
   }
   p {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 1.5rem 0px;
+    @media screen and (min-width: 1568px) {
+      font-size: 2rem;
+      padding: 0 4rem;
+    }
   }
 }
 .third-white-info {
@@ -178,6 +221,10 @@
   }
   h1 {
     font-size: 3rem;
+    @media screen and (min-width: 1568px) {
+      font-size: 4.5rem;
+      padding: 0 4rem;
+    }
   }
   .images {
     margin: 1rem 0;
@@ -230,6 +277,10 @@
   padding: 3rem;
   h1 {
     margin: 1rem 0;
+    @media screen and (min-width: 1568px) {
+      font-size: 4.5rem;
+      padding: 0 4rem;
+    }
   }
 }
 // @media screen and (min-width: 361px) {
