--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -225,25 +225,28 @@
     height: 40vh;
   }
 }
+@media screen and (min-width: 1568px) {
+  .second-dark-info {
+    height: auto;
+  }
+}
 .second-dark-info h1 {
   font-size: 32px;
 }
 @media screen and (min-width: 1568px) {
   .second-dark-info h1 {
     font-size: 4.5rem;
-    padding: 0 4rem;
+    padding: 1rem 8rem;
   }
 }
-.second-dark-info p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 1.5rem 0px;
+@media screen and (min-width: 1568px) {
+  .second-dark-info div {
+    font-size: 2.5rem;
+  }
 }
 @media screen and (min-width: 1568px) {
-  .second-dark-info p {
-    font-size: 2rem;
-    padding: 0 4rem;
+  .second-dark-info h4 {
+    font-size: 2.5rem;
   }
 }
 .third-white-info {
@@ -264,11 +267,33 @@
 @media screen and (min-width: 1568px) {
   .third-white-info h1 {
     font-size: 4.5rem;
-    padding: 0 4rem;
+    padding: 1rem 5rem;
+  }
+}
+@media screen and (min-width: 1568px) {
+  .third-white-info p {
+    font-size: 2rem;
   }
 }
 .third-white-info .images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
   margin: 1rem 0;
+}
+@media screen and (min-width: 1568px) {
+  .third-white-info .images {
+    flex-flow: row wrap;
+  }
+}
+.third-white-info .images .photo {
+  margin: 1rem 0;
+}
+@media screen and (min-width: 1568px) {
+  .third-white-info .images .photo {
+    margin: 1rem;
+  }
 }
 .third-white-info .banner {
   display: flex;
@@ -291,17 +316,29 @@
     width: 100vw;
   }
 }
+.third-white-info .banner p {
+  padding: 3rem 5rem;
+}
+.third-white-info .banner a button {
+  width: 20rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  font-family: Montserrat-alternates, sans-serif;
+  text-decoration: none;
+  border: none;
+  border-radius: 10px;
+  background-color: green;
+  color: whitesmoke;
+}
 .testimonials {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: column;
   background-color: whitesmoke;
+  font-family: Montserrat-alternates, sans-serif;
 }
 @media screen and (min-width: 768px) {
-  .testimonials {
-    height: 100vh;
-  }
   .testimonials blockquote {
     margin: 2rem 0;
   }
@@ -311,7 +348,10 @@
     width: 100vw;
   }
   .testimonials blockquote {
-    margin: 2rem 0;
+    margin: 2rem 5rem;
+  }
+  .testimonials blockquote q {
+    font-size: 2rem;
   }
 }
 .estimate {
@@ -321,12 +361,22 @@
   flex-flow: column;
   padding: 3rem;
 }
-.estimate h1 {
-  margin: 1rem 0;
-}
 @media screen and (min-width: 1568px) {
   .estimate h1 {
     font-size: 4.5rem;
-    padding: 0 4rem;
+    padding: 1rem 15rem;
+  }
+}
+@media screen and (min-width: 1568px) {
+  .estimate a button {
+    width: 20rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    font-family: Montserrat-alternates, sans-serif;
+    text-decoration: none;
+    border: none;
+    border-radius: 10px;
+    background-color: green;
+    color: whitesmoke;
   }
 }
