--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -192,21 +192,24 @@
   @media screen and (min-width: 768px) {
     height: 40vh;
   }
+  @media screen and (min-width: 1568px) {
+    height: auto;
+  }
   h1 {
     font-size: 32px;
     @media screen and (min-width: 1568px) {
       font-size: 4.5rem;
-      padding: 0 4rem;
+      padding: 1rem 8rem;
     }
   }
-  p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1.5rem 0px;
+  div {
     @media screen and (min-width: 1568px) {
-      font-size: 2rem;
-      padding: 0 4rem;
+      font-size: 2.5rem;
+    }
+  }
+  h4 {
+    @media screen and (min-width: 1568px) {
+      font-size: 2.5rem;
     }
   }
 }
@@ -219,15 +222,34 @@
   @media screen and (min-width: 768px) {
     justify-content: space-evenly;
   }
+
   h1 {
     font-size: 3rem;
     @media screen and (min-width: 1568px) {
       font-size: 4.5rem;
-      padding: 0 4rem;
+      padding: 1rem 5rem;
+    }
+  }
+  p {
+    @media screen and (min-width: 1568px) {
+      font-size: 2rem;
     }
   }
   .images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
     margin: 1rem 0;
+    @media screen and (min-width: 1568px) {
+      flex-flow: row wrap;
+    }
+    .photo {
+      margin: 1rem 0;
+      @media screen and (min-width: 1568px) {
+        margin: 1rem;
+      }
+    }
   }
 
   .banner {
@@ -246,6 +268,24 @@
     @media screen and (min-width: 1586px) {
       width: 100vw;
     }
+    h1 {
+    }
+    p {
+      padding: 3rem 5rem;
+    }
+    a {
+      button {
+        width: 20rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        font-family: Montserrat-alternates, sans-serif;
+        text-decoration: none;
+        border: none;
+        border-radius: 10px;
+        background-color: green;
+        color: whitesmoke;
+      }
+    }
   }
 }
 .testimonials {
@@ -254,8 +294,8 @@
   align-items: center;
   flex-flow: column;
   background-color: whitesmoke;
+  font-family: Montserrat-alternates, sans-serif;
   @media screen and (min-width: 768px) {
-    height: 100vh;
     blockquote {
       margin: 2rem 0;
     }
@@ -264,7 +304,10 @@
   @media screen and (min-width: 1586px) {
     width: 100vw;
     blockquote {
-      margin: 2rem 0;
+      margin: 2rem 5rem;
+      q {
+        font-size: 2rem;
+      }
     }
   }
 }
@@ -276,10 +319,24 @@
   flex-flow: column;
   padding: 3rem;
   h1 {
-    margin: 1rem 0;
     @media screen and (min-width: 1568px) {
       font-size: 4.5rem;
-      padding: 0 4rem;
+      padding: 1rem 15rem;
+    }
+  }
+  a {
+    button {
+      @media screen and (min-width: 1568px) {
+        width: 20rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        font-family: Montserrat-alternates, sans-serif;
+        text-decoration: none;
+        border: none;
+        border-radius: 10px;
+        background-color: green;
+        color: whitesmoke;
+      }
     }
   }
 }
