--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -39,7 +39,7 @@
         color: whitesmoke;
         cursor: pointer;
         h4 {
-          color: green;
+          color: #1dd3b0;
         }
       }
     }
