--- a/src/styles/solar-basics.less
+++ b/src/styles/solar-basics.less
@@ -44,7 +44,7 @@
         max-width: 33%;
       }
       h3 {
-        border-bottom: 3px dotted green;
+        border-bottom: 3px dotted #1dd3b0;
       }
     }
   }
