--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -5,12 +5,11 @@
   flex-flow: column;
   height: 450px;
   background: #fefae0;
-  background-color: #d8f3dc; /* Used if the image is unavailable */
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover;
   @media screen and (min-width: 1586px) {
     background-image: url('../images/houston.jpg');
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
   }
 
   h1 {
@@ -33,7 +32,7 @@
     text-decoration: none;
     border: none;
     border-radius: 10px;
-    background-color: green;
+    background-color: #1dd3b0;
     width: 20rem;
     height: 3rem;
     font-size: 1.5rem;
@@ -173,7 +172,7 @@
       text-decoration: none;
       border: none;
       border-radius: 10px;
-      background-color: green;
+      background-color: #1dd3b0;
       color: whitesmoke;
     }
   }
@@ -279,7 +278,7 @@
         text-decoration: none;
         border: none;
         border-radius: 10px;
-        background-color: green;
+        background-color: #1dd3b0;
         color: whitesmoke;
       }
     }
@@ -330,7 +329,7 @@
       text-decoration: none;
       border: none;
       border-radius: 10px;
-      background-color: green;
+      background-color: #1dd3b0;
       color: whitesmoke;
     }
   }
