--- a/src/styles/partner.css
+++ b/src/styles/partner.css
@@ -24,7 +24,7 @@
   border: none;
   cursor: pointer;
   height: 3rem;
-  background-color: green;
+  background-color: #1dd3b0;
   color: whitesmoke;
   font-family: Asap, sans-serif;
 }
