--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -18,11 +18,9 @@
     align-items: center;
     margin: 1rem;
     color: black;
-    @media screen and (min-width: 768px) {
-      color: whitesmoke;
-    }
     @media screen and (min-width: 1568px) {
       font-size: 3rem;
+      color: whitesmoke;
     }
   }
   .link {
@@ -40,8 +38,8 @@
     font-family: Montserrat-alternates, sans-serif;
 
     @media screen and (min-width: 1568px) {
-      font-size: 2.5rem;
-      width: 22rem;
+      font-size: 1.5rem;
+      width: 15rem;
       height: 3.5rem;
     }
   }
@@ -66,6 +64,10 @@
     justify-content: space-evenly;
     height: 100vh;
   }
+  @media screen and (min-width: 1568px) {
+    padding: 0 5rem;
+    font-size: 1.5rem;
+  }
   h1 {
     font-size: 3rem;
     line-height: 3rem;
@@ -73,10 +75,7 @@
   p {
     margin: 1rem 0;
   }
-  @media screen and (min-width: 1568px) {
-    padding: 0 5rem;
-    font-size: 2rem;
-  }
+
   iframe {
     width: 325px;
     height: 225px;
@@ -84,7 +83,7 @@
       height: 40%;
       width: 85%;
     }
-    @media screen and (min-width: 1586px) {
+    @media screen and (min-width: 1568px) {
       height: 55%;
       width: 80%;
     }
@@ -105,15 +104,14 @@
   h1 {
     font-size: 2rem;
     @media screen and (min-width: 1568px) {
-      font-size: 4.5rem;
-      padding: 0 4rem;
+      font-size: 2rem;
     }
   }
   p {
     margin: 1.5rem 0px;
     @media screen and (min-width: 1568px) {
-      font-size: 2rem;
-      padding: 0 4rem;
+      font-size: 1.2rem;
+      padding: 0 15rem;
     }
   }
 }
@@ -143,8 +141,8 @@
       font-size: 4rem;
     }
     @media screen and (min-width: 1568px) {
-      font-size: 4.5rem;
-      padding: 0 4rem;
+      font-size: 3rem;
+      padding: 0 15rem;
       line-height: 5rem;
     }
   }
@@ -174,6 +172,11 @@
       border-radius: 10px;
       background-color: #1dd3b0;
       color: whitesmoke;
+      @media screen and (min-width: 1568px) {
+        font-size: 1.5rem;
+        width: 15rem;
+        height: 3.5rem;
+      }
     }
   }
 }
@@ -195,7 +198,7 @@
   h1 {
     font-size: 32px;
     @media screen and (min-width: 1568px) {
-      font-size: 4.5rem;
+      font-size: 3rem;
       padding: 1rem 8rem;
     }
   }
@@ -223,13 +226,13 @@
   h1 {
     font-size: 3rem;
     @media screen and (min-width: 1568px) {
-      font-size: 4.5rem;
+      font-size: 2rem;
       padding: 1rem 5rem;
     }
   }
   p {
     @media screen and (min-width: 1568px) {
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
   }
   .images {
