--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -283,6 +283,11 @@
         border-radius: 10px;
         background-color: #1dd3b0;
         color: whitesmoke;
+        @media screen and (min-width: 1568px) {
+          font-size: 1.5rem;
+          width: 15rem;
+          height: 3.5rem;
+        }
       }
     }
   }
@@ -334,6 +339,11 @@
       border-radius: 10px;
       background-color: #1dd3b0;
       color: whitesmoke;
+      @media screen and (min-width: 1568px) {
+        font-size: 1.5rem;
+        width: 15rem;
+        height: 3.5rem;
+      }
     }
   }
 }
