--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -51,6 +51,9 @@
     flex-flow: column wrap;
     h1 {
       margin-top: 1rem;
+      @media screen and (min-width: 1568px) {
+        margin: 5rem 0;
+      }
     }
     .social-icons {
       display: flex;
@@ -65,7 +68,7 @@
             width: auto;
           }
           @media screen and (min-width: 1568px) {
-            height: 4rem;
+            height: 2rem;
             width: auto;
           }
         }
