--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -328,6 +328,13 @@
   background-color: #1dd3b0;
   color: whitesmoke;
 }
+@media screen and (min-width: 1568px) {
+  .third-white-info .banner a button {
+    font-size: 1.5rem;
+    width: 15rem;
+    height: 3.5rem;
+  }
+}
 .testimonials {
   display: flex;
   justify-content: center;
@@ -375,4 +382,11 @@
   border-radius: 10px;
   background-color: #1dd3b0;
   color: whitesmoke;
+}
+@media screen and (min-width: 1568px) {
+  .estimate a button {
+    font-size: 1.5rem;
+    width: 15rem;
+    height: 3.5rem;
+  }
 }
