--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -306,7 +306,8 @@
   }
 
   @media screen and (min-width: 1586px) {
-    width: 100vw;
+    width: 80vw;
+    margin: 5rem 0;
     blockquote {
       margin: 2rem 5rem;
       q {
@@ -347,6 +348,3 @@
     }
   }
 }
-// @media screen and (min-width: 361px) {
-
-// }
