--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -6,7 +6,7 @@
   height: 450px;
   background: #fefae0;
   @media screen and (min-width: 1586px) {
-    background-image: url('../images/houston.jpg');
+    background-image: url('../images/houston.webp');
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
@@ -260,7 +260,7 @@
     flex-flow: column;
     height: 100vh;
     margin: 1rem 0;
-    background-image: url('../images/flowers.jpg');
+    background-image: url('../images/flowers.webp');
     background-color: #cccccc; /* Used if the image is unavailable */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
