fixed images to correct aspect ratio per lighthouse

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -30,7 +30,7 @@
     text-decoration: none;
     border: none;
     border-radius: 10px;
-    background-color: #1dd3b0;
+    background-color: black;
     width: 20rem;
     height: 3rem;
     font-size: 1.5rem;
