contrast issue was on the buttons, fixed

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -198,7 +198,7 @@
   text-decoration: none;
   border: none;
   border-radius: 10px;
-  background-color: #1dd3b0;
+  background-color: green;
   color: whitesmoke;
 }
 @media screen and (min-width: 1568px) {
@@ -325,7 +325,7 @@
   text-decoration: none;
   border: none;
   border-radius: 10px;
-  background-color: #1dd3b0;
+  background-color: green;
   color: whitesmoke;
 }
 @media screen and (min-width: 1568px) {
@@ -381,7 +381,7 @@
   text-decoration: none;
   border: none;
   border-radius: 10px;
-  background-color: #1dd3b0;
+  background-color: green;
   color: whitesmoke;
 }
 @media screen and (min-width: 1568px) {
