--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -27,20 +27,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
-    border: none;
-    border-radius: 10px;
-    background-color: black;
-    width: 20rem;
-    height: 3rem;
-    font-size: 1.5rem;
-    color: whitesmoke;
-    font-family: Montserrat-alternates, sans-serif;
-
-    @media screen and (min-width: 1568px) {
-      font-size: 1.5rem;
-      width: 15rem;
-      height: 3.5rem;
+    button {
+      text-decoration: none;
+      border: none;
+      border-radius: 10px;
+      height: 2rem;
+      width: 10rem;
+      background-color: green;
+      color: whitesmoke;
+      font-family: Montserrat-alternates, sans-serif;
     }
   }
 }
