--- a/src/styles/navlinks.less
+++ b/src/styles/navlinks.less
@@ -3,7 +3,7 @@ nav {
   justify-content: space-between;
   align-items: flex-start;
   flex-flow: row wrap;
-  background-color: #2e2e2e;
+  background-color: whitesmoke;
   .links {
     display: none;
     clip-path: circle(100px at 90% -10%);
@@ -26,7 +26,7 @@ nav {
     }
   }
   .icon {
-    color: whitesmoke;
+    color: black;
   }
 }
 
