--- a/src/styles/navlinks.less
+++ b/src/styles/navlinks.less
@@ -1,27 +1,26 @@
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-flow: row wrap;
   background-color: whitesmoke;
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row;
+  }
   .links {
     display: none;
-    clip-path: circle(100px at 90% -10%);
-    transition: all 1s ease-out;
   }
-  .links.open {
+  .open {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 100vh;
     flex-flow: column;
-    clip-path: circle(200% at 90% -10%);
-    color: whitesmoke;
+    color: black;
+    height: 100vh;
 
     .link {
       text-decoration: none;
       h1 {
-        color: whitesmoke;
+        color: black;
       }
     }
   }
@@ -29,20 +28,3 @@ nav {
     color: black;
   }
 }
-
-// .open {
-//     display: flex;
-//     justify-content: space-evenly;
-//     align-items: center;
-//     position: fixed;
-//     background: #2e2e2e;
-//     width: 100%;
-//     height: 100vh;
-//     flex-flow: column;
-//     clip-path: circle(200% at 90% -10%);
-//   }
-// .links {
-//     display: flex;
-//     clip-path: circle(100px at 90% -10%);
-//     transition: all 1s ease-out;
-//   }
