--- a/src/styles/navlinks.less
+++ b/src/styles/navlinks.less
@@ -1,30 +1,48 @@
 nav {
-  background-color: whitesmoke;
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-flow: row;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  background-color: #2e2e2e;
   .links {
     display: none;
+    clip-path: circle(100px at 90% -10%);
+    transition: all 1s ease-out;
   }
-  .open {
+  .links.open {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-flow: column;
-    color: black;
     height: 100vh;
+    flex-flow: column;
+    clip-path: circle(200% at 90% -10%);
+    color: whitesmoke;
 
     .link {
       text-decoration: none;
       h1 {
-        color: black;
+        color: whitesmoke;
       }
     }
   }
   .icon {
-    color: black;
+    color: whitesmoke;
   }
 }
+
+// .open {
+//     display: flex;
+//     justify-content: space-evenly;
+//     align-items: center;
+//     position: fixed;
+//     background: #2e2e2e;
+//     width: 100%;
+//     height: 100vh;
+//     flex-flow: column;
+//     clip-path: circle(200% at 90% -10%);
+//   }
+// .links {
+//     display: flex;
+//     clip-path: circle(100px at 90% -10%);
+//     transition: all 1s ease-out;
+//   }
