--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -38,8 +38,9 @@
         text-decoration: none;
         color: whitesmoke;
         cursor: pointer;
-        h4 {
-          color: #1dd3b0;
+
+        &:hover {
+          color: #7fffd4;
         }
       }
     }
@@ -63,6 +64,9 @@
       a {
         .icon {
           color: whitesmoke;
+          &:hover {
+            color: aquamarine;
+          }
           @media screen and (min-width: 768px) {
             height: 3rem;
             width: auto;
