--- a/src/styles/navlinks.css
+++ b/src/styles/navlinks.css
@@ -1,29 +1,30 @@
 nav {
-  background-color: whitesmoke;
-}
-nav .navbar {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  flex-flow: row;
+  align-items: flex-start;
+  flex-flow: row wrap;
+  background-color: #2e2e2e;
 }
 nav .links {
   display: none;
+  clip-path: circle(100px at 90% -10%);
+  transition: all 1s ease-out;
 }
-nav .open {
+nav .links.open {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-flow: column;
-  color: black;
   height: 100vh;
+  flex-flow: column;
+  clip-path: circle(200% at 90% -10%);
+  color: whitesmoke;
 }
-nav .open .link {
+nav .links.open .link {
   text-decoration: none;
 }
-nav .open .link h1 {
-  color: black;
+nav .links.open .link h1 {
+  color: whitesmoke;
 }
 nav .icon {
-  color: black;
+  color: whitesmoke;
 }
